[package]
name = "rotur-icn-lexer"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "fault-tolerant ICN tokenisation"
readme = "readme.md"

[lints]
workspace = true

[dependencies]
lexgen = "0.16.0"
lexgen_util = "0.16.0"
rotur-icn-units = { version = "0.1.0", path = "../rotur-icn-units" }
