[package]
name = "rotur-icn-lowerer"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "ICN AST validator and normaliser"
readme = "readme.md"

[lints]
workspace = true

[dependencies]
rotur-icn-lexer = { version = "0.1.0", path = "../rotur-icn-lexer" }
rotur-icn-parser = { version = "0.1.0", path = "../rotur-icn-parser" }
rotur-icn-units = { version = "0.1.0", path = "../rotur-icn-units" }
