[package]
name = "rotur-icn-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
codespan-reporting = { version = "0.13.1", optional = true }
rotur-icn-compiler = { version = "0.1.0", path = "../rotur-icn-compiler" }
rotur-icn-syntax = { version = "0.1.0", path = "../rotur-icn-syntax" }

[features]
diagnostics = ["dep:codespan-reporting"]
