[package]
name = "rotur-icn-pipeline"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "a wrapper for processing rotur ICNs"
readme = "readme.md"

[dependencies]
codespan-reporting = { version = "0.13.1", optional = true }
rotur-icn-compiler = { version = "0.1.0", path = "../rotur-icn-compiler" }
rotur-icn-syntax = { version = "0.1.0", path = "../rotur-icn-syntax" }

[features]
diagnostics = ["dep:codespan-reporting"]
