[package]
name = "rotur-icn-printer"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "turn ICN representations back into source"
readme = "readme.md"

[lints]
workspace = true

[dependencies]
arrayvec = "0.7.6"
rotur-icn-lexer = { version = "0.1.0", path = "../rotur-icn-lexer" }
rotur-icn-lowerer = { version = "0.1.0", path = "../rotur-icn-lowerer" }
rotur-icn-parser = { version = "0.1.0", path = "../rotur-icn-parser" }
rotur-icn-resolver = { version = "0.1.0", path = "../rotur-icn-resolver" }
rotur-icn-units = { version = "0.1.0", path = "../rotur-icn-units" }
