[package]
name = "rotur-icn-renderer"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "a wrapper for processing rotur ICNs"
readme = "readme.md"

[dependencies]
rotur-icn-compiler = { version = "0.1.0", path = "../rotur-icn-compiler" }
rotur-icn-units = { version = "0.1.0", path = "../rotur-icn-units" }
