[package]
name = "rotur-icn-resolver"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "ICN simplifier and contextness remover"
readme = "readme.md"

[lints]
workspace = true

[dependencies]
rotur-icn-lexer = { version = "0.1.0", path = "../rotur-icn-lexer" }
rotur-icn-lowerer = { version = "0.1.0", path = "../rotur-icn-lowerer" }
rotur-icn-units = { version = "0.1.0", path = "../rotur-icn-units" }
