[package]
name = "rotur-icn-syntax"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "the lexing & parsing machinery for rotur ICN"
readme = "readme.md"

[dependencies]
arrayvec = "0.7.6"
lexgen = "0.16.0"
lexgen_util = "0.16.0"
rotur-icn-units = { version = "0.1.0", path = "../rotur-icn-units" }
