[package]
name = "rotur-icn-units"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "commonly used unit primitives within rotur ICN"
readme = "readme.md"

[dependencies]
rand = { version = "0.9.2", optional = true, default-features = false }

[features]
rand = ["dep:rand"]
