[package]
name = "rotur-icn-viewer"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "a fast rotur ICN viewer & exporter"
readme = "../readme.md"

[dependencies]
ansi_term = "0.12.1"
codespan-reporting = "0.13.1"
gumdrop = "0.8.1"
rotur-icn-compiler = { version = "0.1.0", path = "../rotur-icn-compiler" }
rotur-icn-pipeline = { version = "0.1.0", path = "../rotur-icn-pipeline", features = ["diagnostics"] }
rotur-icn-renderer = { version = "0.1.0", path = "../rotur-icn-renderer" }
rotur-icn-units = { version = "0.1.0", path = "../rotur-icn-units" }
